--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </div>
             <div class="buttons">
                 <div class="container-btn">
-                    <button class="btn-criptografar">criptografar</button>
-                    <button class="btn-descriptografar">descriptografar</button>
+                     <button onclick=criptografar() class="btn-criptografar">criptografar</button>
+                    <button onclick=descriptografar() class="btn-descriptografar">descriptografar</button>
                 </div>
             </div>
         </main>
@@ -43,6 +43,7 @@
         <div class="icons">
             <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
             <a href=""><ion-icon name="logo-github"></ion-icon></a>
+        </div>
             <h3>Desenvolvido por Elaine Leal</h3>
 
    </footer> 
@@ -53,24 +54,4 @@
 </html>
 
 
-  
- <!-- 
-    <header class="header">
-    <ul class="header__avatar">
-        <li class="header__item">
-            <img class="header__image" src="./assets/user-imge.png" alt="iagem do desenvolverdpr da pagina">
-        </li>
-        <ul>
-            <li>
-                <a href="@"> <button><i class="bi bi-linkedin"></i> </button></a>
-            </li>
-            <li>
-                <a href="@"> <button><i class="bi bi-github"></i> </button></a>
-            </li>
-            
-        </ul>               
-    </ul>
-    <h1>
-        Alura ONE Turma 2024
-    </h1>
-</header> -->
+
